--- a/Lesson7_Assignment/index.htm
+++ b/Lesson7_Assignment/index.htm
@@ -4,9 +4,9 @@
    <!--
       Project Name:  Recipe Display Application
       
-      Author: 
+      Author: Philip LaChance
       
-      Date:   
+      Date: July 22, 2016
 
       Filename: index.htm
    -->  
@@ -52,7 +52,8 @@
       <center><img src="brownie.jpg" alt="BrownieApplication" style="width:304px;height:228px;">
       </center>
    </article>
-
+   <script src="jquery-1.11.1.min.js"> </script>
+   <script src="script.js"> </script>
 </body>
 </html>
 
